fixed responsiveness of the website on tablets

--- a/css/style.css
+++ b/css/style.css
@@ -877,6 +877,9 @@ color: #fff;
   #countdown li span {
     font-size: 60px;
   }
+  #event{
+    font-size: 50px;
+  }
 }
 
 
@@ -1407,4 +1410,23 @@ color: #fff;
 
 
 
-  
+#event::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5); 
+    z-index: 0; 
+}
+
+#event .section-head h4 {
+    position: relative;
+    color: #fff;
+    font-family: 'Alex Brush', cursive;
+    font-weight: 400;
+    font-size: 60px;
+    margin-bottom: 0;
+    text-align: center;
+}
